add caiman model download process to dockerfile

--- a/studio/config/docker/Dockerfile.dev
+++ b/studio/config/docker/Dockerfile.dev
@@ -30,3 +30,6 @@ RUN pip3 install --no-cache-dir --upgrade pip && \
     poetry config virtualenvs.create false
 RUN poetry install --no-root --with dev
 
+# setup optinist: download caiman model files
+COPY studio/app/optinist/wrappers/caiman/run_download_model_files.sh ./
+RUN bash run_download_model_files.sh && rm run_download_model_files.sh
