--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,11 +70,11 @@ sqlmodel = "0.0.12"
 pymysql = "1.1.0"
 fastapi_pagination = "0.12.13"
 plotly = "5.18.0"
-kaleido = "0.2.1"
 filelock = "*"
 ruamel-yaml = "^0.18.5"
 pymatreader = "^0.0.32"
 xmltodict = "*"
+matplotlib = "3.7.*"
 
 [tool.poetry.group.dev]
 optional = true
